--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ body {
 	background-image: url('./assets/space.jpg');
 	background-size: cover;
 	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
